--- a/projects/icc-demo/src/app/views/form/demos/simple-form.component.scss
+++ b/projects/icc-demo/src/app/views/form/demos/simple-form.component.scss
@@ -4,5 +4,29 @@
   flex-direction: row;
   div {
     width: 100%;
+    height: -webkit-fill-available;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
   }
 }
+
+/*
+:host {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+
+  div {
+    width: 100%;
+    height: -webkit-fill-available;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+
+    icc-form {
+      padding-bottom: 15px;
+    }
+  }
+}
+  */
