--- a/projects/icc/panel/src/panel.component.scss
+++ b/projects/icc/panel/src/panel.component.scss
@@ -3,11 +3,14 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
-  //overflow-y: hidden;
+  padding: 0 5px;
   overflow-x: hidden;
 
   ::ng-deep {
     icc-panel-header {
+      position: sticky;
+      //background-color: aqua;
+      top: 0;
       display: flex;
       height: 30px;
       min-height: 30px;
@@ -17,6 +20,10 @@
     }
 
     icc-panel-top-bar {
+      position: sticky;
+      background-color: aqua;
+      top: 0;
+      z-index: 4;
       display: flex;
       flex-direction: row;
       width: 100%;
@@ -27,6 +34,9 @@
     }
 
     icc-panel-bottom-bar {
+      position: sticky;
+      //background-color: aqua;
+      bottom: 0;
       display: flex;
       //z-index: 2;
       height: 30px;
