--- a/projects/icc/form/src/components/form-view.component.scss
+++ b/projects/icc/form/src/components/form-view.component.scss
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  form {
-    height: -webkit-fill-available;
-  }
+  //form {
+  //height: -webkit-fill-available;
+  //}
 }
