--- a/projects/icc/panel/src/panel.component.scss
+++ b/projects/icc/panel/src/panel.component.scss
@@ -1,7 +1,8 @@
 :host {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  //height: 100%;
+  height: -webkit-fill-available;
   width: 100%;
   padding: 0 5px;
   overflow-x: hidden;
