form fit height

--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
@@ -1,8 +1,11 @@
-<!--
-<div>
-  <icc-checkbox [checked]="checked"> Text Checkbox </icc-checkbox>
+<div>Test 1</div>
+
+<div class="grow-box">
+  Test 2
+  <div class="grow-box-inner">Inner</div>
 </div>
--->
+
+<!--
 
 <div>
   <icc-display-field [fieldConfig]="displayConfig" [value]="diaplayValue"></icc-display-field>
@@ -32,3 +35,4 @@
 <div>
   <icc-select-field [fieldConfig]="multiSelectionRemote" [value]="multiObjectStates"></icc-select-field>
 </div>
+-->
