--- a/projects/icc/panel/src/_panel.component.theme.scss
+++ b/projects/icc/panel/src/_panel.component.theme.scss
@@ -1,10 +1,11 @@
-@mixin icc-layout-theme() {
-  icc-layout-header,
-  icc-layout-main,
-  //icc-layout-sidebar,
-  //icc-layout-center,
-  icc-layout-footer {
+@mixin icc-panel-theme() {
+  /*
+  icc-panel-header,
+  icc-panel-main,
+  //icc-panel-sidebar,
+  //icc-panel-center,
+  icc-panel-footer {
     background-color: var(--app-background-color);
     color: icc-theme(app-text-basic-color);
-  }
+  }*/
 }
