form field indicator

--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
@@ -2,7 +2,7 @@
 
 <div class="grow-box">
   Test 2
-  <div class="grow-box-inner">Inner</div>
+  <div class="container2">Inner</div>
 </div>
 
 <!--
