--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.scss
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.scss
@@ -4,7 +4,7 @@
   div {
     margin: 5px;
     width: 500px;
-    border: 1px solid green;
+    //border: 1px solid green;
   }
 
   .grow-box {
@@ -14,5 +14,71 @@
 
   .grow-box-inner {
     height: 900px;
+  }
+
+  .container2 {
+    display: block;
+    width: 0;
+    height: 0;
+    border-width: 0 5px 5px 5px;
+    border-style: solid;
+    border-color: transparent transparent transparent green;
+  }
+
+  .container {
+    position: relative;
+    width: 300px;
+    height: 70px;
+    //background: black;
+    //border-radius: 12px;
+    overflow: hidden;
+  }
+
+  .container:after {
+    content: "";
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 10px 10px 0;
+    border-color: transparent #608a32 transparent transparent;
+    right: 0;
+    top: 0;
+    position: absolute;
+  }
+
+  .arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+
+    border-bottom: 5px solid green;
+  }
+
+  .arrow-down {
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+
+    border-top: 20px solid #f00;
+  }
+
+  .arrow-right {
+    width: 0;
+    height: 0;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+
+    border-left: 5px solid green;
+  }
+
+  .arrow-left {
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+
+    border-right: 10px solid blue;
   }
 }
