--- a/projects/icc/form-field/src/form-field.component.scss
+++ b/projects/icc/form-field/src/form-field.component.scss
@@ -21,6 +21,25 @@
     width: 100%;
   }
 
+  .icc-form-field-container:before {
+    content: "";
+    top: 0;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 5px 5px 5px 0px;
+    border-color: transparent transparent transparent transparent;
+  }
+
+  .icc-form-field-indicator-red:before {
+    border-top-color: red;
+  }
+
+  .icc-form-field-indicator-green:before {
+    border-top-color: green;
+  }
+
   .icc-form-field-container {
     padding-right: 5px;
     flex: 1 0 66%;
