display field indicator

--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
@@ -1,12 +1,13 @@
 <div>Test 1</div>
 
+<icc-form [formConfig]="formConfig" [formFields]="fieldSet" [values]="values"></icc-form>
+
+<!--
+
 <div class="grow-box">
   Test 2
   <div class="container2">Inner</div>
 </div>
-
-<!--
-
 <div>
   <icc-display-field [fieldConfig]="displayConfig" [value]="diaplayValue"></icc-display-field>
 </div>
