--- a/projects/icc/fields/src/date-field/date-field.component.html
+++ b/projects/icc/fields/src/date-field/date-field.component.html
@@ -3,6 +3,7 @@
     [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
     [iccLabelWidth]="fieldConfig.labelWidth"
     [iccFieldWidth]="fieldConfig.fieldWidth"
+    [iccFieldControl]="field"
   >
     <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
       {{ fieldConfig.fieldLabel }}
