--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -5,6 +5,7 @@
       [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
       [iccLabelWidth]="fieldConfig.labelWidth"
       [iccFieldWidth]="fieldConfig.fieldWidth"
+      [iccFieldControl]="field"
     >
       <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
         {{ fieldConfig.fieldLabel }}
