--- a/projects/icc-demo/src/app/views/form/demos/password-page.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/password-page.component.html
@@ -11,3 +11,20 @@
 
   <icc-form [formConfig]="formConfig2" [formFields]="fieldSet6" [values]="values6"></icc-form>
 </div>
+
+<!--
+<div>
+  <icc-form [formConfig]="formConfig" [formFields]="fieldSet" [values]="values"></icc-form>
+  <icc-form [formConfig]="formConfig2" [formFields]="fieldSet3" [values]="values3"></icc-form>
+</div>
+
+<div>
+  <icc-form [formConfig]="formConfig2" [formFields]="fieldSet4" [values]="values4"></icc-form>
+</div>
+<div>
+  <icc-form [formConfig]="formConfig1" [formFields]="fieldSet5" [values]="values5"></icc-form>
+
+  <icc-form [formConfig]="formConfig2" [formFields]="fieldSet6" [values]="values6"></icc-form>
+</div>
+
+-->
