field control disabled

--- a/projects/icc/form-field/src/form-field.component.html
+++ b/projects/icc/form-field/src/form-field.component.html
@@ -9,7 +9,7 @@
       [ngStyle]="{ width: fieldWidth }"
       (click)="_control && _control.onContainerClick($event)"
     >
-      <div class="icc-form-field-container" [ngClass]="formFieldIndicatorColor">
+      <div class="icc-form-field-container" [ngClass]="formFieldIndicator">
         <div class="icc-form-field-infix" #inputContainer>
           <ng-content></ng-content>
         </div>
