--- a/projects/icc/button/src/button.component.scss
+++ b/projects/icc/button/src/button.component.scss
@@ -7,7 +7,7 @@
   white-space: nowrap;
   vertical-align: middle;
   cursor: pointer;
-  color: red;
+  //color: red;
   font-size: 12px;
   //font-weight: 500;
   //line-height: 24px;
