--- a/projects/icc/panel/src/panel.component.scss
+++ b/projects/icc/panel/src/panel.component.scss
@@ -25,7 +25,7 @@
 
     icc-panel-top-bar {
       position: sticky;
-      background-color: aqua;
+      //background-color: aqua;
       top: 0;
       z-index: 1;
       display: flex;
