--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -7,6 +7,7 @@
 @import "../../fields/src/fields.component.theme";
 @import "../../checkbox/src/checkbox.component.theme";
 @import "../../radio/src/radio.component.theme";
+@import "../../panel/src/panel.component.theme";
 
 @import "../../calendar/src/calendar.component.theme";
 @import "../../calendar/src/weekdays/weekdays.component.theme";
@@ -23,6 +24,7 @@
   @include icc-fields-theme();
   @include icc-checkbox-theme();
   @include icc-radio-theme();
+  @include icc-panel-theme();
 
   @include icc-calendar-theme();
   @include icc-calendar-weekdays-theme();
