--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -10,6 +10,9 @@ $theme: (
   icc-grid-row-hover-background-color: #e5e5e5,
   icc-grid-toolbar-background-color: #d2d2d2,
 
+  //panel
+  icc-panel-top-bar-background-color: #d2d2d2,
+
   //menu
   icc-menu-item-background-color: #ffffff,
   icc-menu-item-hover-background-color: #e5e5e9,
