--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -10,6 +10,9 @@ $theme: (
   icc-grid-row-hover-background-color: #353535,
   icc-grid-toolbar-background-color: #404040,
 
+  //panel
+  icc-panel-top-bar-background-color: #404040,
+
   //menu
   icc-menu-item-background-color: #1c1c1e,
   icc-menu-item-hover-background-color: #2c2c2e,
