--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -13,6 +13,9 @@ $theme: (
   //panel
   icc-panel-top-bar-background-color: #404040,
 
+  //button
+  icc-button-default-color: #4b4f54,
+  //base-button-border-color: transparent,
   //menu
   icc-menu-item-background-color: #1c1c1e,
   icc-menu-item-hover-background-color: #2c2c2e,
