--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -13,6 +13,9 @@ $theme: (
   //panel
   icc-panel-top-bar-background-color: #d2d2d2,
 
+  //button
+  icc-button-default-color: #ffffff,
+  //base-button-border-color: transparent,
   //menu
   icc-menu-item-background-color: #ffffff,
   icc-menu-item-hover-background-color: #e5e5e9,
