--- a/projects/icc/button/src/button.component.scss
+++ b/projects/icc/button/src/button.component.scss
@@ -7,14 +7,13 @@
   white-space: nowrap;
   vertical-align: middle;
   cursor: pointer;
-  //color: red;
+  margin: 0 1px;
   font-size: 12px;
-  //font-weight: 500;
-  //line-height: 24px;
 
   &:hover,
   &:focus {
     text-decoration: none;
+    border: 1px solid orangered;
   }
 
   &[disabled] {
@@ -22,11 +21,9 @@
     opacity: 0.5;
   }
 
-  // Theming styles
-  padding: 0 10px;
+  //padding: 0 10px;
   border: 1px solid transparent;
 
-  /*
   &.status-default {
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
 
@@ -39,38 +36,6 @@
       display: inline-flex;
     }
   }
-
-  &.status-primary {
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
-    color: #fff;
-
-    &[disabled]:hover {
-      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
-    }
-
-    &:focus,
-    &:hover {
-      font-weight: 400;
-      box-shadow: none;
-      display: inline-flex;
-    }
-  }
-
-  &.status-danger {
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
-    color: #fff;
-
-    &[disabled]:hover {
-      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
-    }
-
-    &:focus,
-    &:hover {
-      font-weight: 400;
-      box-shadow: none;
-      display: inline-flex;
-    }
-  }*/
 
   &.appearance-ghost {
     box-shadow: none;
