--- a/projects/icc/form-field/src/_form-field.component.theme.scss
+++ b/projects/icc/form-field/src/_form-field.component.theme.scss
@@ -26,4 +26,44 @@
       }
     }
   }
+
+  [iccInput] {
+    height: 1.75rem;
+    border: none;
+    background-color: transparent;
+    color: icc-theme(app-text-basic-color);
+
+    &.input-full-width {
+      width: 100%;
+    }
+
+    &.appearance-ghost {
+      border: none;
+      box-shadow: none;
+      background-color: transparent;
+    }
+  }
+
+  textarea[iccInput] {
+    display: block;
+    height: 3.5rem;
+    border: 1px solid icc-theme(app-border-basic-color);
+    padding: 0.375rem;
+    line-height: 0.9375rem;
+  }
+
+  /* hide input spin with type=number */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
+
+  legend {
+    border-bottom: 1px solid icc-theme(app-border-basic-color);
+  }
 }
