--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -60,9 +60,9 @@
         </ng-template>
       </icc-autocomplete>
 
-      <ng-container *ngIf="field?.errors">
+      <icc-form-field-errors *ngIf="field?.touched && field?.errors">
         <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-      </ng-container>
+      </icc-form-field-errors>
     </icc-form-field>
   </ng-container>
 </ng-container>
