--- a/projects/icc/fields/src/radio-group-field/radio-group-field.component.html
+++ b/projects/icc/fields/src/radio-group-field/radio-group-field.component.html
@@ -21,8 +21,8 @@
       </icc-radio>
     </ng-container>
 
-    <ng-container *ngIf="field?.errors">
+    <icc-form-field-errors *ngIf="field?.touched && field?.errors">
       <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-    </ng-container>
+    </icc-form-field-errors>
   </icc-form-field>
 </ng-container>
