--- a/projects/icc/fields/src/text-field/text-field.component.html
+++ b/projects/icc/fields/src/text-field/text-field.component.html
@@ -13,7 +13,6 @@
       type="text"
       autocomplete="off"
       [formControlName]="fieldConfig.fieldName!"
-      (click)="$event.stopPropagation()"
       (keyup)="onChange()"
       (blur)="onBlur()"
       [required]="required"
@@ -21,8 +20,15 @@
     />
     <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
 
-    <ng-container *ngIf="field?.touched && field?.errors">
+    <icc-form-field-errors *ngIf="field?.touched && field?.errors">
       <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-    </ng-container>
+    </icc-form-field-errors>
   </icc-form-field>
 </ng-container>
+<!--
+      (click)="$event.stopPropagation()"
+
+          <ng-container *ngIf="field?.touched && field?.errors">
+      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
+    </ng-container>
+      -->
