--- a/projects/icc/fields/src/textarea-field/textarea-field.component.html
+++ b/projects/icc/fields/src/textarea-field/textarea-field.component.html
@@ -11,7 +11,6 @@
     <textarea
       iccInput
       [formControlName]="fieldConfig.fieldName!"
-      (click)="$event.stopPropagation()"
       (keyup)="onChange()"
       spellcheck="false"
       [required]="required"
@@ -20,8 +19,11 @@
     </textarea>
     <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
 
-    <ng-container *ngIf="field?.touched && field?.errors">
+    <icc-form-field-errors *ngIf="field?.touched && field?.errors">
       <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-    </ng-container>
+    </icc-form-field-errors>
   </icc-form-field>
 </ng-container>
+<!--
+      (click)="$event.stopPropagation()"
+      -->
