--- a/projects/icc/form-field/src/form-field.component.html
+++ b/projects/icc/form-field/src/form-field.component.html
@@ -4,19 +4,16 @@
       <span class="icc-form-field-required-marker" *ngIf="_control && _control.required && !_control.disabled">*</span>
       <ng-content select="icc-label"></ng-content>:
     </label>
-    <div
-      class="icc-form-field-wrapper"
-      [ngStyle]="{ width: fieldWidth }"
-      (click)="_control && _control.onContainerClick($event)"
-    >
+    <div class="icc-form-field-wrapper" [ngStyle]="{ width: fieldWidth }" (click)="onClick($event)">
       <div class="icc-form-field-container" [ngClass]="formFieldIndicator">
         <div class="icc-form-field-infix" #inputContainer>
           <ng-content></ng-content>
         </div>
-        <div class="icc-form-field-suffix" [ngClass]="{ 'icc-form-field-suffix-focus': _control && _control.focused }">
+        <div class="icc-form-field-suffix" [ngClass]="fieldFocused ? 'icc-form-field-suffix-focus' : ''">
           <ng-content select="[iccSuffix]"></ng-content>
         </div>
       </div>
+
       <div class="icc-form-field-error">
         <ng-content select="icc-form-field-errors"></ng-content>
       </div>
