--- a/projects/icc/form-field/src/form-field.component.html
+++ b/projects/icc/form-field/src/form-field.component.html
@@ -1,15 +1,15 @@
 <div class="icc-form-field">
   <div class="icc-form-field-flex">
     <label class="icc-form-field-label" #label>
-      <span class="icc-form-field-required-marker" *ngIf="_control && _control.required && !_control.disabled">*</span>
+      <span class="icc-form-field-required-marker" *ngIf="required">*</span>
       <ng-content select="icc-label"></ng-content>:
     </label>
     <div class="icc-form-field-wrapper" [ngStyle]="{ width: fieldWidth }" (click)="onClick($event)">
-      <div class="icc-form-field-container" [ngClass]="formFieldIndicator">
+      <div class="icc-form-field-container" [ngClass]="fieldIndicator">
         <div class="icc-form-field-infix" #inputContainer>
           <ng-content></ng-content>
         </div>
-        <div class="icc-form-field-suffix" [ngClass]="fieldFocused ? 'icc-form-field-suffix-focus' : ''">
+        <div class="icc-form-field-suffix" [ngClass]="focused ? 'icc-form-field-suffix-focus' : ''">
           <ng-content select="[iccSuffix]"></ng-content>
         </div>
       </div>
