--- a/projects/icc/fields/src/number-field/number-field.component.html
+++ b/projects/icc/fields/src/number-field/number-field.component.html
@@ -3,7 +3,7 @@
     [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
     [iccLabelWidth]="fieldConfig.labelWidth"
     [iccFieldWidth]="fieldConfig.fieldWidth"
-    [iccFieldControl]="field"
+    [iccFormFieldControl]="field"
   >
     <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
       {{ fieldConfig.fieldLabel }}
