--- a/projects/icc/form-field/src/form-field.component.html
+++ b/projects/icc/form-field/src/form-field.component.html
@@ -4,7 +4,7 @@
       <span class="icc-form-field-required-marker" *ngIf="required">*</span>
       <ng-content select="icc-label"></ng-content>:
     </label>
-    <div class="icc-form-field-wrapper" [ngStyle]="{ width: fieldWidth }" (click)="onClick($event)">
+    <div class="icc-form-field-wrapper" [ngStyle]="{ width: fieldWidth }">
       <div class="icc-form-field-container" [ngClass]="fieldIndicator">
         <div class="icc-form-field-infix" #inputContainer (mouseenter)="onMouseenter()" (mouseleave)="onMouseleave()">
           <ng-content></ng-content>
