--- a/projects/icc/form-field/src/_form-field.component.theme.scss
+++ b/projects/icc/form-field/src/_form-field.component.theme.scss
@@ -35,7 +35,7 @@
 
   .icc-form-field-invalid {
     .icc-form-field-infix {
-      border: 1px solid orangered;
+      border-bottom: 1px solid orangered;
     }
   }
 
