--- a/projects/icc/fields/src/checkbox-field/checkbox-field.component.html
+++ b/projects/icc/fields/src/checkbox-field/checkbox-field.component.html
@@ -10,7 +10,7 @@
     </icc-label>
     <icc-checkbox [formControlName]="fieldConfig.fieldName!" (change)="onChange()"></icc-checkbox>
 
-    <icc-form-field-errors *ngIf="field?.touched && field?.errors">
+    <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
       <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
     </icc-form-field-errors>
   </icc-form-field>
