--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -60,7 +60,7 @@
         </ng-template>
       </icc-autocomplete>
 
-      <icc-form-field-errors *ngIf="field?.touched && field?.errors">
+      <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
         <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
       </icc-form-field-errors>
     </icc-form-field>
