form field control

--- a/projects/icc/form-field/src/_form-field.component.theme.scss
+++ b/projects/icc/form-field/src/_form-field.component.theme.scss
@@ -34,7 +34,7 @@
   }
 
   .icc-form-field-invalid {
-    .icc-form-field-infix {
+    .icc-form-field-container {
       border-bottom: 1px solid orangered;
     }
   }
