form field control

--- a/projects/icc/form-field/src/form-field.component.scss
+++ b/projects/icc/form-field/src/form-field.component.scss
@@ -65,6 +65,7 @@
     line-height: 1.75rem;
     font-size: 0.6875rem;
     font-weight: 500 !important;
+    white-space: nowrap;
 
     ::ng-deep icc-label {
       white-space: nowrap;
@@ -85,9 +86,12 @@
   }
 
   .icc-form-field-required-marker {
-    position: absolute;
-    left: 0;
-    color: #ff4f4f;
+    display: inline-flex;
+    background-color: #ff4f4f;
+    height: 3px;
+    width: 3px;
+    border-radius: 50%;
+    transform: translateY(-3px);
   }
 
   .icc-form-field-hint,
