--- a/projects/icc/form-field/src/form-field.component.html
+++ b/projects/icc/form-field/src/form-field.component.html
@@ -1,7 +1,7 @@
 <div class="icc-form-field">
   <div class="icc-form-field-flex">
     <label class="icc-form-field-label" #label>
-      <span class="icc-form-field-required-marker" *ngIf="required">*</span>
+      <span class="icc-form-field-required-marker" *ngIf="required"></span>
       <ng-content select="icc-label"></ng-content>:
     </label>
     <div class="icc-form-field-wrapper" [ngStyle]="{ width: fieldWidth }">
