--- a/projects/icc/fields/src/date-field/date-field.component.html
+++ b/projects/icc/fields/src/date-field/date-field.component.html
@@ -15,7 +15,7 @@
       [calendarModal]="datepicker"
       [value]="field.value | localeDate"
       [disabled]="field.disabled"
-      [placeholder]="fieldConfig.placeholder"
+      [placeholder]="fieldConfig.placeholder! | translate"
       [required]="required"
       readonly
     />
