--- a/projects/icc/fields/src/password-field/password-field.component.html
+++ b/projects/icc/fields/src/password-field/password-field.component.html
@@ -6,7 +6,7 @@
     [iccFormFieldControl]="field"
   >
     <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
-      {{ fieldConfig.fieldLabel }}
+      {{ fieldConfig.fieldLabel | translate }}
     </icc-label>
     <input
       iccInput
@@ -15,7 +15,7 @@
       [formControlName]="fieldConfig.fieldName!"
       (keyup)="onChange()"
       [required]="required"
-      placeholder="{{ fieldConfig.placeholder }}"
+      placeholder="{{ fieldConfig.placeholder! | translate }}"
     />
     <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
 
