--- a/projects/icc/calendar/src/calendar.component.html
+++ b/projects/icc/calendar/src/calendar.component.html
@@ -30,13 +30,9 @@
 
       <div class="today-btn">
         <button icc-button status="primary" (click)="setDateToday()">
-          {{ "Today" }}
+          {{ "ICC.UI.CALENDAR.TODAY" | translate }}
         </button>
       </div>
     </div>
   </div>
 </ng-template>
-
-<!--
-          {{ 'COMMON.ACTION.TODAY' | translate }}
--->
