--- a/projects/icc/fields/src/date-field/date-field.component.html
+++ b/projects/icc/fields/src/date-field/date-field.component.html
@@ -13,7 +13,7 @@
       iccInput
       iccCalendarToggle
       [calendarModal]="datepicker"
-      [value]="inputDate"
+      [value]="field.value | localeDate"
       [disabled]="field.disabled"
       [placeholder]="fieldConfig.placeholder! | translate"
       [required]="required"
