--- a/projects/icc/form/src/components/form-view.component.html
+++ b/projects/icc/form/src/components/form-view.component.html
@@ -1,8 +1,11 @@
 <icc-panel-top-bar>
   <ng-container *ngFor="let button of formConfig.buttons">
-    <button icc-button (click)="buttonClick(button)">{{ button.title }}</button>
+    <button icc-button *ngIf="buttonVisible(button)" [disabled]="buttonDisabled(button)" (click)="buttonClick(button)">
+      {{ button.title }}
+    </button>
   </ng-container>
   <!--
+  [disabled]="disabled"
   ngif button visile and disaled by dirty
   -->
 </icc-panel-top-bar>
