--- a/projects/icc/icon/src/icon.component.scss
+++ b/projects/icc/icon/src/icon.component.scss
@@ -1,7 +1,8 @@
 :host {
   display: inline-block;
 
-  font-size: 1rem;
-  height: 1em;
-  vertical-align: -0.125em;
+  font-size: 10px;
+  height: 10px;
+  //vertical-align: -0.125em;
+  padding-right: 5px;
 }
