--- a/projects/icc/icon/src/icon.component.scss
+++ b/projects/icc/icon/src/icon.component.scss
@@ -1,8 +1,7 @@
 :host {
   display: inline-block;
-
-  font-size: 10px;
-  height: 10px;
-  //vertical-align: -0.125em;
+  font-size: 0.625rem;
+  height: 0.625rem;
+  vertical-align: -0.125em;
   padding-right: 5px;
 }
