--- a/projects/icc/checkbox/src/checkbox.component.scss
+++ b/projects/icc/checkbox/src/checkbox.component.scss
@@ -16,6 +16,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 0.75rem;
+    padding-right: 0;
   }
 
   .icc-checkbox-label {
