--- a/projects/icc/panel/src/panel.component.scss
+++ b/projects/icc/panel/src/panel.component.scss
@@ -20,12 +20,11 @@
       min-height: 30px;
       justify-content: center;
       align-items: center;
-      //border: 1px solid green;
     }
 
     icc-panel-top-bar {
       position: sticky;
-      //background-color: aqua;
+      justify-content: flex-end;
       top: 0;
       z-index: 1;
       display: flex;
@@ -34,6 +33,12 @@
       height: 30px;
       min-height: 30px;
       padding: 0 5px;
+
+      .icc-panel-top-bar-title {
+        display: flex;
+        margin-right: auto;
+        align-items: center;
+      }
     }
 
     icc-panel-bottom-bar {
