update file drop

--- a/projects/icc-demo/src/app/views/form/demos/file-drop.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/file-drop.component.html
@@ -8,7 +8,8 @@
       [disabled]="!checked"
       [multiple]="true"
       (onFileDrop)="dropped($event)"
-    ></icc-file-drop>
+      >Test</icc-file-drop
+    >
   </div>
   <div class="pb-2">
     {{ entries | json }}
