--- a/projects/icc/file-drop/src/file-drop.component.html
+++ b/projects/icc/file-drop/src/file-drop.component.html
@@ -38,5 +38,6 @@
       [ngTemplateOutletContext]="{ openFileSelector: openFileSelector }"
     >
     </ng-template>
+    <div>Test888</div>
   </div>
 </div>
