add file drop grid

--- a/projects/icc/file-drop/src/components/file-drop/file-drop.component.html
+++ b/projects/icc/file-drop/src/components/file-drop/file-drop.component.html
@@ -38,6 +38,7 @@
       [ngTemplateOutletContext]="{ openFileSelector: openFileSelector }"
     >
     </ng-template>
-    <div>Test888</div>
   </div>
 </div>
+
+<icc-file-drop-grid> </icc-file-drop-grid>
