add file drop grid

--- a/projects/icc/file-drop/src/components/file-drop/file-drop.component.html
+++ b/projects/icc/file-drop/src/components/file-drop/file-drop.component.html
@@ -38,7 +38,6 @@
       [ngTemplateOutletContext]="{ openFileSelector: openFileSelector }"
     >
     </ng-template>
+    <div>Drag & Drop File Fold or Files Here</div>
   </div>
 </div>
-
-<icc-file-drop-grid class="file-drop-grid"> </icc-file-drop-grid>
