--- a/projects/icc/file-drop/src/file-drop-upload.component.html
+++ b/projects/icc/file-drop/src/file-drop-upload.component.html
@@ -19,4 +19,6 @@
     (onFileDrop)="dropped($event)"
   >
   </icc-file-drop>
+
+  <icc-file-drop-grid class="icc-file-drop-grid"> </icc-file-drop-grid>
 </icc-panel>
