--- a/projects/icc/file-drop/src/file-drop-upload.component.scss
+++ b/projects/icc/file-drop/src/file-drop-upload.component.scss
@@ -1,13 +1,13 @@
 :host {
-  //display: flex;
-  //width: 100%;
+  display: flex;
+  height: -webkit-fill-available;
 
   ::ng-deep {
     icc-file-drop {
       div.icc-file-drop__content,
       div.icc-file-drop__drop-zone--enabled,
       div.icc-file-drop__drop-zone--disabled {
-        height: 200px;
+        height: 60px;
         border-radius: 30px;
         color: #001428; // $colors-text-primary;
         font-size: 18px;
@@ -34,5 +34,10 @@
         border: 3px dashed #dfe2e5; //$colors-border;
       }
     }
+  }
+
+  .icc-file-drop-grid {
+    display: flex;
+    flex: 1;
   }
 }
