--- a/projects/icc/file-drop/src/components/file-drop/file-drop.component.scss
+++ b/projects/icc/file-drop/src/components/file-drop/file-drop.component.scss
@@ -1,5 +1,35 @@
 :host {
   padding-bottom: 10px;
+
+  div.icc-file-drop__content,
+  div.icc-file-drop__drop-zone--enabled,
+  div.icc-file-drop__drop-zone--disabled {
+    height: 60px;
+    border-radius: 30px;
+    color: #001428; // $colors-text-primary;
+    font-size: 18px;
+    font-weight: 400;
+    font-family: "Inter", sans-serif; //$font-family-standard;
+    flex-direction: column;
+    transition: all 0.2s ease-in-out;
+
+    a {
+      color: #007bfd; //$colors-blue-primary;
+    }
+  }
+
+  div.icc-file-drop__drop-zone--enabled,
+  div.icc-file-drop__drop-zone--disabled {
+    border: 3px dashed #dfe2e5; // $colors-border
+  }
+
+  div.icc-file-drop__drop-zone--enabled:hover {
+    border-color: #001428; //$colors-text-primary;
+  }
+
+  div.icc-file-drop__drop-zone--disabled:hover {
+    border: 3px dashed #dfe2e5; //$colors-border;
+  }
 }
 
 .icc-file-drop__drop-zone {
