fiel upload grid

--- a/projects/icc/file-upload/src/file-drop-upload.component.html
+++ b/projects/icc/file-upload/src/file-drop-upload.component.html
@@ -19,5 +19,5 @@
   >
   </icc-file-drop>
 
-  <icc-file-drop-grid class="icc-file-drop-grid"> </icc-file-drop-grid>
+  <icc-file-upload-grid> </icc-file-upload-grid>
 </icc-panel>
