--- a/projects/icc/file-upload/src/file-select-upload.component.html
+++ b/projects/icc/file-upload/src/file-select-upload.component.html
@@ -17,5 +17,5 @@
     </ng-container>
   </div>
 
-  <icc-file-drop-grid> </icc-file-drop-grid>
+  <icc-file-upload-grid> </icc-file-upload-grid>
 </icc-panel>
