--- a/projects/icc/file-upload/src/file-drop-upload.component.scss
+++ b/projects/icc/file-upload/src/file-drop-upload.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   height: -webkit-fill-available;
 
-  .icc-file-drop-grid {
+  icc-file-upload-grid {
     display: flex;
     flex: 1;
   }
