--- a/projects/icc/file-upload/src/components/file-drop/file-drop.component.html
+++ b/projects/icc/file-upload/src/components/file-drop/file-drop.component.html
@@ -38,6 +38,6 @@
       [ngTemplateOutletContext]="{ openFileSelector: openFileSelector }"
     >
     </ng-template>
-    <div>Drag & Drop File Fold or Files Here</div>
+    <div>{{ "ICC.UI.FILE_UPLOAD.DRAG_DROP_FILE" | translate }}</div>
   </div>
 </div>
