--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
@@ -1,5 +1,5 @@
 <div class="grid-header-cell" (click)="headCellClick($event)">
-  <div class="grid-header-cell-title">{{ title }}</div>
+  <div class="grid-header-cell-title">{{ title | translate }}</div>
 
   <ng-container *ngIf="gridConfig.columnSort && isSortField">
     <div *ngIf="sortDir === 'asc'" class="grid-header-cell-sort">
