--- a/projects/icc/file-upload/src/file-drop-upload.component.html
+++ b/projects/icc/file-upload/src/file-drop-upload.component.html
@@ -1,11 +1,13 @@
 <icc-panel>
   <icc-panel-top-bar *ngIf="uploadFiles$ | async as uploadFiles">
-    <div class="icc-panel-top-bar-title">{{ "File Drop Upload" }}</div>
-    <icc-checkbox [checked]="checked" (change)="onChange($event)">Enabled</icc-checkbox>
+    <div class="icc-panel-top-bar-title">{{ "ICC.UI.FILE_UPLOAD.FILE_DROP_UPLOAD" | translate }}</div>
+    <icc-checkbox [checked]="checked" (change)="onChange($event)">{{
+      "ICC.UI.ACTIONS.ENABLED" | translate
+    }}</icc-checkbox>
     <ng-container *ngFor="let button of buttons">
       <button icc-button [disabled]="uploadFiles.length === 0" (click)="buttonClick(button)">
         <icc-icon *ngIf="button.icon" [icon]="button.icon"></icc-icon>
-        {{ button.title }}
+        {{ button.title | translate }}
       </button>
     </ng-container>
   </icc-panel-top-bar>
