--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -1,8 +1,14 @@
 <ng-container *ngIf="gridConfig$ | async as gridConfig">
   <ng-container *ngIf="columnsConfig$ | async as columns">
     <div class="icc-grid-toolbar" *ngIf="!gridConfig.hideTopbar">
-      <button (click)="refresh()">Refresh</button>
-      <button (click)="clearFilters()">Clear All Filters</button>
+      <button icc-button (click)="refresh()">
+        <icc-icon [icon]="buttons[0].icon!"></icc-icon>
+        {{ buttons[0].title | translate }}
+      </button>
+      <button icc-button (click)="clearFilters()">
+        <icc-icon [icon]="buttons[1].icon!"></icc-icon>
+        {{ buttons[1].title | translate }}
+      </button>
     </div>
     <icc-grid-view [gridConfig]="gridConfig" [columns]="columns"> </icc-grid-view>
 
