--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -17,7 +17,7 @@
 </div>
 
 <cdk-virtual-scroll-viewport
-  itemSize="24"
+  [itemSize]="gridConfig.rowHeight"
   [ngStyle]="{
     'overflow-x': gridConfig.horizontalScroll ? 'auto' : 'hidden',
     'overflow-y': gridConfig.virtualScroll || gridConfig.verticalScroll ? 'auto' : 'hidden',
