--- a/projects/icc/tree/src/tree.component.html
+++ b/projects/icc/tree/src/tree.component.html
@@ -1,8 +1,8 @@
-<ng-container *ngIf="gridConfig$ | async as gridConfig">
+<ng-container *ngIf="treeConfig$ | async as treeConfig">
   <ng-container *ngIf="columnsConfig$ | async as columns">
     <!--
 
-    <div class="icc-grid-toolbar" *ngIf="!gridConfig.hideTopbar">
+    <div class="icc-grid-toolbar" *ngIf="!treeConfig.hideTopbar">
       <button icc-button (click)="refresh()">
         <icc-icon [icon]="buttons[0].icon!"></icc-icon>
         {{ buttons[0].title | translate }}
@@ -13,10 +13,10 @@
       </button>
     </div>
         -->
-    <icc-tree-view [gridConfig]="gridConfig" [columns]="columns"> </icc-tree-view>
+    <icc-tree-view [treeConfig]="treeConfig" [columns]="columns"> </icc-tree-view>
 
     <!--
-    <icc-grid-footer [gridConfig]="gridConfig" *ngIf="!gridConfig.hideGridFooter"> </icc-grid-footer>
+    <icc-grid-footer [treeConfig]="treeConfig" *ngIf="!treeConfig.hideGridFooter"> </icc-grid-footer>
         -->
   </ng-container>
 </ng-container>
